@@ -101,6 +101,29 @@ it through less or to a text file.
     puts cb
   end
 
+== Extract metadata only 
+
+  require 'rubygems'
+  require 'pdf/reader'
+
+  class MetaDataReceiver
+    attr_accessor :regular
+    attr_accessor :xml
+
+    def metadata(data)
+      @regular = data
+    end
+
+    def metadata_xml(data)
+      @xml = data
+    end
+  end
+
+  receiver = MetaDataReceiver.new
+  pdf = PDF::Reader.file(ARGV.shift, receiver, :pages => false, :metadata => true)
+  puts receiver.regular.inspect
+  puts receiver.xml.inspect
+
 == Basic RSpec of a generated PDF 
 
   require 'rubygems'
